--- a/apps/backend/modules/common/config/menu.yml
+++ b/apps/backend/modules/common/config/menu.yml
@@ -20,7 +20,7 @@ menu:
           course_info:                { route: course_show, param: slug,  label: "Course Info" }
           announcements:              { route: course_announcement, label: "Announcements" }
           course_meeting_times:       { route: course_meeting_time, label: "Meeting Times" }
-          course_calendar:            { route: calendar, label: "Course Calendar" }
+          course_calendar:            { route: course_calendar, label: "Calendar" }
           assignments:                { route: assignment, label: "Assignments" }
           assessment_types:           { route: assessment_type, label: "Assessment Types" }
           course_discussion:          { route: course_discussion, label: "Discussions" }
