--- a/apps/backend/modules/student_enroll/config/generator.yml
+++ b/apps/backend/modules/student_enroll/config/generator.yml
@@ -7,7 +7,7 @@ generator:
     with_show:             false
     singular:              ~
     plural:                ~
-    route_prefix:          student
+    route_prefix:          student_enroll
     with_doctrine_route:   true
     actions_base_class:    sfActions
 
@@ -42,7 +42,7 @@ generator:
           done:              []
           _save:             []
       new:
-        title:               New Student
+        title:               "Enroll now for all your Unisa modules tutorials!"
         actions:
           cancel:            []
           _save:             { label: "Enroll Now!" }
