Added the faq module for both frontend and course

--- a/apps/backend/config/routing.yml
+++ b/apps/backend/config/routing.yml
@@ -1,3 +1,12 @@
+faq:
+  class: sfDoctrineRouteCollection
+  options:
+    model:                Faq
+    module:               faq
+    prefix_path:          /faq
+    column:               id
+    with_wildcard_routes: true
+
 instructor_enroll:
   class: sfDoctrineRouteCollection
   options:
