Added the redactor editor

--- a/apps/backend/config/view.yml
+++ b/apps/backend/config/view.yml
@@ -11,8 +11,8 @@ default:
     #language:     en
     #robots:       index, follow
     
-  stylesheets:    [fonts.css, elements.css, tutorplus.css, left-menu.css, form.css, symfony.css, colorbox/jquery.colorbox.css, jquery/jquery.tools.css]
-  javascripts:    [jquery-1.6.2.min.js, jquery.form.js, tutorplus.js, jquery/jquery.validate.min.js, jquery.colorbox-min.js, jquery/jquery.autosize-min.js]
+  stylesheets:    [fonts.css, elements.css, tutorplus.css, left-menu.css, form.css, symfony.css, colorbox/jquery.colorbox.css, jquery/jquery.tools.css, redactor.css]
+  javascripts:    [jquery-1.6.2.min.js, jquery.form.js, tutorplus.js, jquery/jquery.validate.min.js, jquery.colorbox-min.js, jquery/jquery.autosize-min.js, editors/redactor/redactor.min.js]
 
   has_layout:     true
   layout:         layout
