--- a/apps/frontend/modules/course_discussion/config/generator.yml
+++ b/apps/frontend/modules/course_discussion/config/generator.yml
@@ -2,7 +2,7 @@ generator:
   class: sfDoctrineGenerator
   param:
     model_class:           Discussion
-    theme:                 popup
+    theme:                 normal
     non_verbose_templates: true
     with_show:             false
     singular:              ~
@@ -18,7 +18,8 @@ generator:
         nb_members:        { label: Members }
         nb_topics:         { label: Total topics }
       form:
-        display:           [name, description, access_level]
+        display:
+          "Details":       [name, description, access_level]
       filter:
         class: false
       list:
@@ -34,7 +35,6 @@ generator:
       edit:
         title:             Edit Discussion
         actions:
-          _delete:         []
           cancel:          []
           done:            []
           _save:           []
