--- a/apps/frontend/modules/student_enroll/config/generator.yml
+++ b/apps/frontend/modules/student_enroll/config/generator.yml
@@ -17,9 +17,9 @@ generator:
         password_again:      { label: "Confirm password" }
         permissions_list:    { lable: Roles }
 
-      actions: ~
+      actions:               ~
       form:
-        class:               StudentForm
+        class:               StudentRegisterForm
         display:            
          "Your Personal Details":        [first_name, last_name, number, email_address, mobile_phone, country_id, state_province_id]
          "Tutorial Enrollment Details":  [year, semester, department_1, course_1, department_2, course_2, department_3, course_3]
