Modified the home page images and student enroll modules

--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -690,23 +690,9 @@ student:
     prefix_path:          /student
     column:               id
     with_wildcard_routes: true
-    
-student_register_create:
-  url:     /enroll/student.:sf_format
-  class:   sfDoctrineRoute
-  options: { model: Student, type: object }
-  param:   { module: enroll, action: studentCreate, sf_format: html }
-  requirements: { sf_method: post }
-  
-student_register_new:
-  url:     /student/register/new.:sf_format
-  class:   sfDoctrineRoute
-  options: { model: Student, type: object }
-  param:   { module: enroll, action: studentRegister, sf_format: html }
-  requirements: { sf_method: get }
   
 instructor_register_create:
-  url:     /enroll/instructor.:sf_format
+  url:     /instructor/register.:sf_format
   class:   sfDoctrineRoute
   options: { model: Instructor, type: object }
   param:   { module: enroll, action: instructorCreate, sf_format: html }
