Added new style changes to the public pages

--- a/apps/frontend/modules/student_enroll/config/view.yml
+++ b/apps/frontend/modules/student_enroll/config/view.yml
@@ -1,6 +1,6 @@
 all:
   layout: register
-  stylesheets: [student.css]  
+  stylesheets: [student.css, picture.css]  
   
 newSuccess:
   has_layout: true
