--- a/apps/frontend/modules/activity_template/config/view.yml
+++ b/apps/frontend/modules/activity_template/config/view.yml
@@ -1,8 +1,2 @@
 all:
-  stylesheets: [communication.css]
-  
-newSuccess:
-  has_layout: false
-  
-editSuccess:
-  has_layout: false
+  stylesheets: [email_template.css]
