--- a/apps/frontend/modules/payment_scheme/config/generator.yml
+++ b/apps/frontend/modules/payment_scheme/config/generator.yml
@@ -1,36 +1,35 @@
 generator:
   class: sfDoctrineGenerator
   param:
-    model_class:           Payment
+    model_class:           PaymentScheme
     theme:                 normal
     non_verbose_templates: true
     with_show:             false
     singular:              ~
     plural:                ~
-    route_prefix:          payment
+    route_prefix:          payment_scheme
     with_doctrine_route:   true
     actions_base_class:    sfActions
 
     config:
       actions: ~
       fields:
-        user:                   { label: "Bookkeeper" }
       filter:
         class: false
       list:
-        title:                  Received Payments
-        display:                [student, amount, user, reference, balance]
-        sort:                   [reference, asc]
+        title:                  Payment Schemes
+        display:                [student, amount, _frequency, next_payment_date]
+        sort:                   [frequency, asc]
         batch_actions:          []
         object_actions:
           _edit: ~
           _delete: ~
         max_per_page:			10
         actions:
-          _new:                 { label: "+ Add Payment" }
+          _new:                 { label: "+ Add Scheme" }
       form:
         display:
-          "Details":            [student_id, amount, reference, comment]
+          "Details":            [student_id, amount, frequency, next_payment_date]
       edit:
         actions:
           cancel:               []
