--- a/apps/frontend/modules/section/config/view.yml
+++ b/apps/frontend/modules/section/config/view.yml
@@ -2,4 +2,4 @@ all:
   layout:         public
 
 indexSuccess:
-  stylesheets:    [public.css, scrollable-buttons.css]
+  stylesheets:    [scrollable-buttons.css]
