--- a/apps/frontend/modules/discussion_member/config/view.yml
+++ b/apps/frontend/modules/discussion_member/config/view.yml
@@ -1,3 +1,9 @@
 all:
   stylesheets: [discussion, profile]
   layout:      other
+  
+acceptSuccess:
+  has_layout: false
+  
+suggestedSuccess: 
+  has_layout: false
