--- a/apps/frontend/modules/discussion_topic/config/generator.yml
+++ b/apps/frontend/modules/discussion_topic/config/generator.yml
@@ -13,6 +13,8 @@ generator:
 
     config:
       actions:             ~
+      fields:
+        message:           { label: Description }
       form:
         display:           [subject, message]
       filter:
